--- a/admin/public/css/app.css
+++ b/admin/public/css/app.css
@@ -138,6 +138,7 @@ button,
      -moz-appearance: none;
           appearance: none;
   cursor: pointer;
+  outline: none;
 }
 
 button:hover,
@@ -164,21 +165,6 @@ button.medium,
 [type=reset].medium,
 [type=submit].medium {
   width: 150px;
-}
-
-button::-moz-focus-inner,
-[type=button]::-moz-focus-inner,
-[type=reset]::-moz-focus-inner,
-[type=submit]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-button:-moz-focusring,
-[type=button]:-moz-focusring,
-[type=reset]:-moz-focusring,
-[type=submit]:-moz-focusring {
-  outline: 1px dotted ButtonText;
 }
 
 fieldset {
@@ -264,6 +250,57 @@ textarea {
 [type=text]::placeholder,
 [type=password]::placeholder {
   color: #cccccc;
+}
+
+.error [type=text],
+.error [type=password] {
+  border-color: #c02020;
+  background: #f0e0e0;
+}
+
+.error-baloon {
+  padding: 4px;
+  position: absolute;
+  font-size: 1.2rem;
+  color: #c02020;
+  font-weight: bold;
+  bottom: 40px;
+  left: 40px;
+  display: block;
+  opacity: 0;
+  border-radius: 8px;
+  border: #c02020 solid 1px;
+  background: #ffffff;
+  word-break: keep-all;
+  transition: opacity 0.3s ease-in-out 0s;
+}
+
+.error-baloon:before,
+.error-baloon:after {
+  width: 0;
+  height: 0;
+  content: "";
+  position: absolute;
+  left: 16px;
+  border-style: solid;
+  border-width: 6px 6px 0 6px;
+  border-left-color: transparent;
+  border-right-color: transparent;
+  border-bottom-color: transparent;
+}
+
+.error-baloon:before {
+  bottom: -7px;
+  border-top-color: #c02020;
+}
+
+.error-baloon:after {
+  bottom: -6px;
+  border-top-color: #ffffff;
+}
+
+.error .error-baloon {
+  opacity: 1;
 }
 
 ::-webkit-file-upload-button {
