--- a/admin/resources/sass/app.scss
+++ b/admin/resources/sass/app.scss
@@ -126,6 +126,7 @@ button,
   background: $color-admin-button;
   appearance: none;
   cursor: pointer;
+  outline: none;
   &:hover {
     color: #796837;
     background: $color-admin-button-hover;
@@ -140,21 +141,6 @@ button,
   &.medium {
     width: 150px;
   }
-}
-
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
 }
 
 fieldset {
@@ -208,6 +194,50 @@ textarea {
   flex: 1;
   &::placeholder {
     color: #cccccc;
+  }
+  .error & {
+    border-color: #c02020;
+    background: #f0e0e0;
+  }
+}
+
+.error-baloon {
+  padding: 4px;
+  position: absolute;
+  font-size: 1.2rem;
+  color: #c02020;
+  font-weight: bold;
+  bottom: 40px;
+  left: 40px;
+  display: block;
+  opacity: 0;
+  border-radius: 8px;
+  border: #c02020 solid 1px;
+  background: #ffffff;
+  word-break: keep-all;
+  transition: opacity .3s ease-in-out 0s;
+  &:before, &:after {
+    width: 0;
+    height: 0;
+    content: "";
+    position: absolute;
+    left: 16px;
+    border-style: solid;
+    border-width: 6px 6px 0 6px;
+    border-left-color: transparent;
+    border-right-color: transparent;
+    border-bottom-color: transparent;
+  }
+  &:before {
+    bottom: -7px;
+    border-top-color: #c02020;
+  }
+  &:after {
+    bottom: -6px;
+    border-top-color: #ffffff;
+  }
+  .error & {
+    opacity: 1;
   }
 }
 
