--- a/admin/public/css/app.css
+++ b/admin/public/css/app.css
@@ -264,8 +264,7 @@ textarea {
   font-size: 1.2rem;
   color: #c02020;
   font-weight: bold;
-  bottom: 40px;
-  left: 40px;
+  top: 40px;
   display: block;
   opacity: 0;
   border-radius: 8px;
@@ -283,20 +282,22 @@ textarea {
   position: absolute;
   left: 16px;
   border-style: solid;
-  border-width: 6px 6px 0 6px;
+  border-width: 0 6px 6px 6px;
+  border-top-color: transparent;
   border-left-color: transparent;
   border-right-color: transparent;
-  border-bottom-color: transparent;
 }
 
 .error-baloon:before {
-  bottom: -7px;
-  border-top-color: #c02020;
+  top: -7px;
+  border-bottom-color: #c02020;
+  z-index: 1;
 }
 
 .error-baloon:after {
-  bottom: -6px;
-  border-top-color: #ffffff;
+  top: -6px;
+  border-bottom-color: #ffffff;
+  z-index: 2;
 }
 
 .error .error-baloon {
