【管理画面】エラーハンドリングの全反映とprettierの設定変更

--- a/admin/resources/sass/_variables.scss
+++ b/admin/resources/sass/_variables.scss
@@ -1,6 +1,6 @@
 // Typography
-$font-family-sans-serif: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3",
-    メイリオ, Meiryo, "ＭＳ Ｐゴシック", sans-serif;
+$font-family-sans-serif: 'Hiragino Kaku Gothic Pro', 'ヒラギノ角ゴ Pro W3', メイリオ, Meiryo,
+  'ＭＳ Ｐゴシック', sans-serif;
 $font-size-base: 1.6rem;
 $line-height-base: 1.6;
 
