【管理画面】レイアウトの土台とヘッダー部分作成

--- a/admin/resources/sass/_variables.scss
+++ b/admin/resources/sass/_variables.scss
@@ -8,6 +8,7 @@ $line-height-base: 1.6;
 $color-font-base: #ffffff;
 $color-font-black: #333333;
 $color-font-gray: #969696;
+$color-font-title: #666666;
 $color-admin-primary: #424852;
 $color-admin-secondary: #b9bdc4;
 $color-admin-button: linear-gradient(to bottom, #eaeaea, #cecece);
