【管理画面】サイドナビ追加

--- a/admin/resources/sass/_variables.scss
+++ b/admin/resources/sass/_variables.scss
@@ -9,8 +9,14 @@ $color-font-base: #ffffff;
 $color-font-black: #333333;
 $color-font-gray: #969696;
 $color-font-title: #666666;
+$color-font-over: #666666;
+$color-font-link: #999999;
+$color-font-hover: #eeeeee;
 $color-admin-primary: #424852;
 $color-admin-secondary: #b9bdc4;
 $color-admin-button: linear-gradient(to bottom, #eaeaea, #cecece);
 $color-admin-button-disabled: linear-gradient(to bottom, #fafafa, #efefef);
 $color-admin-button-hover: linear-gradient(to bottom, #e5ded0, #cbc1ad);
+$color-admin-border: #eeeeee;
+$color-admin-menuover: #dfe2e6;
+$color-admin-linkover: #a2a6ac;
