【管理画面】サイドナビのリンクを権限によって無効または隠す

--- a/admin/resources/sass/_variables.scss
+++ b/admin/resources/sass/_variables.scss
@@ -12,6 +12,7 @@ $color-font-title: #666666;
 $color-font-over: #666666;
 $color-font-link: #999999;
 $color-font-hover: #eeeeee;
+$color-font-disable: #a0a0a0;
 $color-admin-primary: #424852;
 $color-admin-secondary: #b9bdc4;
 $color-admin-button: linear-gradient(to bottom, #eaeaea, #cecece);
