【管理画面】サイドナビを権限によって出し分け、パンくず調整

--- a/admin/resources/sass/_variables.scss
+++ b/admin/resources/sass/_variables.scss
@@ -21,3 +21,4 @@ $color-admin-button-hover: linear-gradient(to bottom, #e5ded0, #cbc1ad);
 $color-admin-border: #eeeeee;
 $color-admin-menuover: #dfe2e6;
 $color-admin-linkover: #a2a6ac;
+$color-admin-breadcrumbs: #797d85;
