【管理画面】_variables.scssの整理

--- a/admin/resources/sass/_variables.scss
+++ b/admin/resources/sass/_variables.scss
@@ -4,21 +4,29 @@ $font-family-sans-serif: 'Hiragino Kaku Gothic Pro', 'ヒラギノ角ゴ Pro W3'
 $font-size-base: 1.6rem;
 $line-height-base: 1.6;
 
-// Colors
-$color-font-base: #ffffff;
+// Font Colors
+$color-font-white: #ffffff;
 $color-font-black: #333333;
-$color-font-gray: #969696;
-$color-font-title: #666666;
-$color-font-over: #666666;
-$color-font-link: #999999;
-$color-font-hover: #eeeeee;
-$color-font-disable: #a0a0a0;
+$color-font-lightgray: #969696;
+$color-font-darkgray: #666666;
+
+// Link Colors
+$color-link-default: #999999;
+$color-link-hover: #eeeeee;
+$color-link-hover-bg: #a2a6ac;
+$color-link-disable: #a0a0a0;
+
+// admin Base Colors
 $color-admin-primary: #424852;
 $color-admin-secondary: #b9bdc4;
+
+// admin Button Colors
 $color-admin-button: linear-gradient(to bottom, #eaeaea, #cecece);
 $color-admin-button-disabled: linear-gradient(to bottom, #fafafa, #efefef);
 $color-admin-button-hover: linear-gradient(to bottom, #e5ded0, #cbc1ad);
+
+// admin Border Colors
 $color-admin-border: #eeeeee;
-$color-admin-menuover: #dfe2e6;
-$color-admin-linkover: #a2a6ac;
-$color-admin-breadcrumbs: #797d85;
+
+// admin Sidenav Mouseover Colors
+$color-sidnav-hover: #dfe2e6;
