--- a/admin/resources/sass/app.scss
+++ b/admin/resources/sass/app.scss
@@ -121,22 +121,26 @@ button,
 [type='submit'] {
   height: 40px;
   font-size: 2rem;
-  color: #666666;
   font-weight: bold;
   border-radius: 8px;
   box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.4);
   border: 1px solid #707070;
-  background: $color-admin-button;
   appearance: none;
   cursor: pointer;
-  &:hover {
-    color: #796837;
-    background: $color-admin-button-hover;
-    border-color: #bfb4a2;
+  &:active {
+    transform: translate(1px, 1px);
+    box-shadow: none;
+  }
+  &.ok {
+    color: $color-font-white;
+    background: $color-admin-ok-button;
+  }
+  &.cancel {
+    background: $color-admin-cancel-button;
   }
   &:disabled {
     color: #d5d5d5;
-    background: $color-admin-button-disabled;
+    background: $color-admin-disabled-button;
     border-color: #e2e2e2;
     cursor: not-allowed;
   }
