--- a/admin/resources/sass/_variables.scss
+++ b/admin/resources/sass/_variables.scss
@@ -9,6 +9,8 @@ $color-font-white: #f0f0f0;
 $color-font-black: #212121;
 $color-font-silvergrey: #9c9c9c;
 $color-font-steelgrey: #6d696f;
+$color-font-jaunebrillant: #f4d500;
+$color-font-signalred: #ce2143;
 
 // Link Colors
 $color-link-default: #999999;
